[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-booking-system"
version = "0.1.0"
description = "SkyBound Travels Backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "sqlalchemy>=2.0",
    "alembic>=1.16",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "python-dotenv>=1.1",
    "httpx>=0.28",
    "structlog>=25.4"
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
    "isort",
    "mypy"
]